Fixed issues reported by findbugs 1.3.3. The important ones are: * Not closing file streams. * Using Map keyset interation instead of entryset iteration.
* missing break in a switch-case.
Fixed issues reported by findbugs 1.3.3. The important ones are:

* Not closing file streams.
* Using Map keyset interation instead of entryset iteration.

* missing break in a switch-case.